fix(Contacts): menu alignment and button styling

--- a/src/assets/scss/_main.scss
+++ b/src/assets/scss/_main.scss
@@ -7,3 +7,9 @@ body {
     box-sizing: border-box;
     position: relative;
 }
+
+button {
+    &:focus {
+        outline: none;
+    }
+}
