--- a/src/assets/scss/_table.scss
+++ b/src/assets/scss/_table.scss
@@ -33,6 +33,7 @@ table {
     }
 
     &__options {
+        user-select: none;
         border-radius: 4px;
         cursor: pointer;
         border: 1px solid $grey-dark;
@@ -44,6 +45,11 @@ table {
 
         &:hover {
             background-color: $primary-lighter;
+        }
+
+        &--wrapper {
+            display: flex;
+            justify-content: center;
         }
     }
 
@@ -63,12 +69,12 @@ table {
 
     &__menu {
         position: absolute;
-        margin-top: 12px;
+        margin-top: 47px;
         background: $primary-darker;
         font-size: 14px;
         list-style: none;
         padding: 10px 5px;
-        right: 43px;
+        right: 53px;
         border-radius: 4px;
         font-family: 'Open Sans';
 
